# ptxconf

./: .gitignore  README.md  api2md.py  classifiers.txt  index.html  install-ptxconf.sh  ptxconf.py  search.html  setup.cfg  setup.py  sitemap.xml  test.py
API/: index.html
doc/: index.rst
documentation/: mkdocs.yml
documentation/docs/: API.md  index.md
mkdocs/: search_index.json
ptxconftools/: __init__.py  confcontroller.py
ptxconftools/gtk/: __init__.py  monitorselector.py
src/ptxconf/: confcontroller.py  monitorselector.py  ptxconf.py
tests/: test_ptxconf.py
