[metadata]
license = GNU Affero General Public License v3
url = https://github.com/wenhsinjen/ptxconf
keywords = ptxconf, ptx, ui,
classifiers = file: classifiers.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_version = >=3.7

[flake8]
max-line-length = 80